FIX SERVER PUBLICKEY SHARED - 2801h27SET